--- a/ember-drf-example/django_server/templates/django_server/post_detail.html
+++ b/ember-drf-example/django_server/templates/django_server/post_detail.html
@@ -1,4 +1,4 @@
-{% extends "blog/base.html" %}
+{% extends "django_server/base.html" %}
 
 {% block content %}
 <h1>{% if is_python %}[PYTHON]{% endif %} {{ post.title }}</h1>
