--- a/ember-drf-example/eblog/templates/eblog/body.handlebars
+++ b/ember-drf-example/eblog/templates/eblog/body.handlebars
@@ -1,6 +1,6 @@
 {% verbatim %}
 <div class="blog-app">
-    <h1>{{#link-to "posts"}}Example Blog{{/link-to}}</h1>
+    <h1>{{#link-to "posts"}}Example Dashboard{{/link-to}}</h1>
     <nav>
         {{#each category in categories itemController="category"}}
             {{#link-to "categoryPosts" category.id classNameBindings="controller.isActive:current"}}{{category.name}}{{/link-to}}
