--- a/ember-drf-example/ember_client/templates/ember_client/ember_client.html
+++ b/ember-drf-example/ember_client/templates/ember_client/ember_client.html
@@ -3,16 +3,16 @@
 
 {% block body %}
 <script type="text/x-handlebars">
-    {% include "eblog/body.handlebars" %}
+    {% include "ember_client/body.handlebars" %}
 </script>
 <script type="text/x-handlebars" data-template-name="posts">
-    {% include "eblog/posts.handlebars" %}
+    {% include "ember_client/posts.handlebars" %}
 </script>
 <script type="text/x-handlebars" data-template-name="categoryPosts">
-    {% include "eblog/posts.handlebars" %}
+    {% include "ember_client/posts.handlebars" %}
 </script>
 <script type="text/x-handlebars" data-template-name="post">
-    {% include "eblog/post.handlebars" %}
+    {% include "ember_client/post.handlebars" %}
 </script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="{% static 'vendor/handlebars-v1.3.0.js' %}"></script>
