Insert stuff into the interface

--- a/ember-drf-example/ember_client/templates/ember_client/ember_client.html
+++ b/ember-drf-example/ember_client/templates/ember_client/ember_client.html
@@ -28,4 +28,6 @@
 <script src="{% static 'application/controllers.js' %}"></script>
 <script src="{% static 'application/models.js' %}"></script>
 <script src="{% static 'application/views.js' %}"></script>
+
+<!-- Insert stuff here -->
 {% endblock %}
