Fix more stuff, get that summary page

--- a/ember-drf-example/django_server/templates/django_server/base.html
+++ b/ember-drf-example/django_server/templates/django_server/base.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Django + Django Rest Framework + Ember.js example</title>
-        <meta name="Description" content="Serwis poświęcony tworzeniu serwisów internetowych, stron mobilnych, SEO, jak i gotowym skryptom i komponentom." />
+        <meta name="Description" content="" />
         <link rel="stylesheet" type="text/css" media="all" href="{% static "styles.css" %}" />
     </head>
     <body>
