--- a/ember-drf-example/ember_client/templates/ember_client/summary.hbs
+++ b/ember-drf-example/ember_client/templates/ember_client/summary.hbs
@@ -1,12 +1,14 @@
 {% verbatim %}
 <div class="blog-app">
-    <h1>{{#link-to "summary"}}Example Dashboard{{/link-to}}</h1>
+    <h1>{{#link-to "posts"}}Example Blog{{/link-to}}</h1>
     <nav>
-        
+        {{#each category in categories itemController="category"}}
+            {{#link-to "categoryPosts" category.id classNameBindings="controller.isActive:current"}}{{category.name}}{{/link-to}}
+        {{/each}}
     </nav>
     {{outlet}}
 </div>
 {% endverbatim %}
 <footer>
-    <a href="{% url 'summary' %}">Classic version</a>
+    <a href="{% url 'posts' %}">Classic version</a>
 </footer>
