--- a/dashboard/ember_client/templates/ember_client/summary.hbs
+++ b/dashboard/ember_client/templates/ember_client/summary.hbs
@@ -10,5 +10,5 @@
 </div>
 {% endverbatim %}
 <footer>
-   <!-- <a href="{% url 'summary' %}">Classic version</a> -->
+    <a href="{% url 'summary' %}">Classic version</a>
 </footer>
